@@ -1,5 +1,13 @@
 2016-08-09  Bastian Maerkisch  <bmaerkisch@web.de>
 
+	* src/wnin/wgdiplus.cpp:  Include iostream.h before syscfg.h in order
+	to avoid MSVC choking on the re-definition of stdio routines by
+	wtext.h/winmain.c.  Do not use namespace std since this causes MSVC
+	to throw an error because of the (re-)definition of bool in syscfg.h.
+
+	* src/win/wmenu.c:  Move variable declaration to beginning of code
+	block.  Required e.g. by MSVC 2012.
+
 	* src/win/wgraph.c src/win/wgdiplus.cpp (W_hypertext):  Use the
 	encoding which was active while plotting, not the current one, to
 	display hypertext.
